--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "homepage": "https://gitlab.com/cmso-dn/cmso_backend#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.1",
+    "momentjs": "^2.0.0",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
