--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mariadb": "^3.0.1",
     "momentjs": "^2.0.0",
     "morgan": "^1.10.0",
+    "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
   }
 }
