--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.1",
+    "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "morgan": "^1.10.0",
     "passport-jwt": "^4.0.0",
