--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "morgan": "^1.10.0",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
