--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "passport-jwt": "^4.0.0",
+    "prisma-erd-generator": "^1.11.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
