--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.1",
     "moment": "^2.29.4",
