--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,14 @@
-PORT = 
-DB_HOST=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME= cmso_db
+PORT = 8080
 
-PRIVATE_KEY = 
+DB_PORT = 
+DB_HOST = 
+DB_USERNAME = 
+DB_PASSWORD =
+DB_NAME = 
+
+DATABASE_URL = mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+PRIVATE_KEY =
 
 MAIL_ENDPOINT = https://w3.med.cmu.ac.th/api/v1/mail
 MAIL_TOKEN =
