--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app.js",
     "dbsync": "npx prisma migrate dev",
     "dblook": "npx prisma studio",
+    "dbpull": "npx prisma db pull && npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
