--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^3.0.0",
     "nodemon": "^3.0.1",
     "passport-jwt": "^4.0.0",
+    "pdfkit": "^0.15.1",
     "prisma-erd-generator": "^1.11.2",
     "uuid": "^8.3.2"
   },
