--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.0.0",
     "nodemon": "^3.0.1",
     "passport-jwt": "^4.0.0",
