feat: boilerplate for mail api v2

--- a/.env_example
+++ b/.env_example
@@ -12,3 +12,7 @@ PRIVATE_KEY =
 
 MAIL_ENDPOINT = https://w3.med.cmu.ac.th/api/v1/mail
 MAIL_TOKEN = 
+
+MAIL_ENDPOINT_V2 = https://w3.med.cmu.ac.th/api/v1/mail
+MAIL_ACCESS_TOKEN_V2 = 
+MAIL_REFRESH_TOKEN_V2 = 
