--- a/.env_example
+++ b/.env_example
@@ -16,3 +16,5 @@ MAIL_TOKEN =
 MAIL_ENDPOINT_V2 = https://w3.med.cmu.ac.th/api/v1/mail
 MAIL_ACCESS_TOKEN_V2 = 
 MAIL_REFRESH_TOKEN_V2 = 
+
+MS_LIST_SECRET_KEY = 
