hotfix: file log system

--- a/.env_example
+++ b/.env_example
@@ -8,13 +8,18 @@ DB_NAME =
 
 DATABASE_URL = mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-PRIVATE_KEY =
+PRIVATE_KEY = 
 
 MAIL_ENDPOINT = https://w3.med.cmu.ac.th/api/v1/mail
 MAIL_TOKEN = 
 
-MAIL_ENDPOINT_V2 = https://w3.med.cmu.ac.th/api/v1/mail
+MAIL_ENDPOINT_V2 = https://w3.med.cmu.ac.th/api/v2/mail
 MAIL_ACCESS_TOKEN_V2 = 
 MAIL_REFRESH_TOKEN_V2 = 
 
 MS_LIST_SECRET_KEY = 
+
+LOG_SIZE = 10M
+LOG_INTERVAL = 1d
+LOG_FORMAT = combined
+LOG_FILE = true
