--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 package-lock.json
 access.log
+
 # user uploaded file
 db_data*
 ./db_data
@@ -12,8 +13,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-log
-./log
+log/*
+./log/*
 
 # Optional npm cache directory
 .npm
