--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pdfkit": "^0.15.1",
     "pdfkit-table": "^0.1.99",
     "prisma-erd-generator": "^1.11.2",
+    "rotating-file-stream": "^3.2.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
