--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       MS_LIST_SECRET_KEY:       ${MS_LIST_SECRET_KEY}
       
     command: > 
-            sh -c "apk add --no-cache python3 make g++ &&  npm install --quiet && npm rebuild bcrypt --build-from-source && npx prisma generate && node app.js"
+            sh -c "apk add --no-cache python3 make g++ &&  npm install --quiet && npm rebuild bcrypt --build-from-source && npx prisma generate && npm run dev"
     depends_on:
       db: 
         condition: service_healthy 
