--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "momentjs": "^2.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "nanoid": "^3.0.0",
     "nodemon": "^3.0.1",
     "passport-jwt": "^4.0.0",
